feat: creacion de componenetes y vista inicial del mockup udistrital/sga_documentacion#382

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,5 +46,101 @@
         "estado": "State",
         "descripcion_columna": "Description",
         "visualizar": "visualize"
+    },
+
+    "heteroevaluacion": {
+    "titulo": "Heteroevaluation",
+    "fechas": "Dates",
+    "inicio": "Start",
+    "fin": "End",
+    "estudiante": "Student",
+    "nombre_estudiante": "Student Name",
+    "identificacion_estudiante": "Student ID",
+    "identificacion": "ID",
+    "proyecto_curricular": "Curricular Project",
+    "proyecto1": "Name of curricular project 1",
+    "proyecto2": "Name of curricular project 2",
+    "descripcion_proceso": "Process description and user guidance",
+    "descripcion": "Description",
+    "formulario": "Corresponding form",
+    "formulario_placeholder": "Corresponding form",
+    "guardar": "Save"
+    },
+
+    "autoevaluacion_i": {
+        "titulo": "Self-evaluation I",
+        "fechas": "Dates",
+        "inicio": "Start",
+        "fin": "End",
+        "estudiante": "Student",
+        "nombre_estudiante": "Student Name",
+        "identificacion_estudiante": "Student ID",
+        "identificacion": "ID",
+        "proyecto_curricular": "Curricular Project",
+        "proyecto1": "Name of curricular project 1",
+        "proyecto2": "Name of curricular project 2",
+        "descripcion_proceso": "Process description and user guidance",
+        "descripcion": "Description",
+        "formulario": "Corresponding form",
+        "formulario_placeholder": "Corresponding form",
+        "guardar": "Save"
+    },
+
+    "coevaluacion_i": {
+        "titulo": "Peer evaluation I",
+        "fechas": "Dates",
+        "inicio": "Start",
+        "fin": "End",
+        "proyecto_curricular": "Curricular Project",
+        "proyecto": "Project",
+        "espacio_academico": "Academic Space",
+        "espacio": "Academic space",
+        "descripcion_proceso": "Process description and user guidance",
+        "descripcion": "Description",
+        "formulario": "Corresponding form",
+        "formulario_placeholder": "Corresponding form",
+        "guardar": "Save"
+    },
+
+    "autoevaluacion_ii": {
+        "titulo": "Self-evaluation II",
+        "fechas": "Dates",
+        "inicio": "Start",
+        "fin": "End",
+        "nombre_docente": "Teacher's Name",
+        "nombre": "Name",
+        "identificacion_docente": "Teacher's ID",
+        "identificacion": "ID",
+        "proyecto_curricular": "Curricular Project",
+        "proyecto1": "Name of curricular project 1",
+        "proyecto2": "Name of curricular project 2",
+        "proyectoN": "Name of curricular project n",
+        "espacios_academicos": "Academic Spaces",
+        "espacio1": "List of academic spaces associated with the teacher and the curricular project",
+        "espacio2": "List of academic spaces associated with the teacher and the curricular project",
+        "espacioN": "List of n academic spaces associated with the teacher and the curricular project",
+        "descripcion_proceso": "Process description and user guidance",
+        "descripcion": "Description",
+        "formulario": "Corresponding form",
+        "formulario_placeholder": "Corresponding form",
+        "guardar": "Save"
+    },
+    
+    "coevaluacion_ii": {
+        "titulo": "Peer evaluation II",
+        "fechas": "Dates",
+        "inicio": "Start",
+        "fin": "End",
+        "proyecto_curricular": "Curricular Project",
+        "proyecto": "Project",
+        "docente": "Teacher",
+        "nombre_docente": "Teacher's Name",
+        "espacio_academico": "Academic Space",
+        "espacio": "Academic space",
+        "descripcion_proceso": "Process description and user guidance",
+        "descripcion": "Description",
+        "formulario": "Corresponding form",
+        "formulario_placeholder": "Corresponding form",
+        "guardar": "Save"
     }
 }
