--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -46,5 +46,101 @@
         "estado": "Estado",
         "descripcion_columna": "Descripción",
         "visualizar": "visualizar"
+    },
+    
+    "heteroevaluacion": {
+        "titulo": "Heteroevaluación",
+        "fechas": "Fechas",
+        "inicio": "Inicio",
+        "fin": "Fin",
+        "estudiante": "Estudiante",
+        "nombre_estudiante": "Nombre del Estudiante",
+        "identificacion_estudiante": "Identificación estudiante",
+        "identificacion": "Identificación",
+        "proyecto_curricular": "Proyecto Curricular",
+        "proyecto1": "Nombre del proyecto curricular 1",
+        "proyecto2": "Nombre del proyecto curricular 2",
+        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion": "Descripción",
+        "formulario": "Formulario correspondiente",
+        "formulario_placeholder": "Formulario correspondiente",
+        "guardar": "Guardar"
+    },
+
+    "autoevaluacion_i": {
+        "titulo": "Autoevaluación I",
+        "fechas": "Fechas",
+        "inicio": "Inicio",
+        "fin": "Fin",
+        "estudiante": "Estudiante",
+        "nombre_estudiante": "Nombre del Estudiante",
+        "identificacion_estudiante": "Identificación estudiante",
+        "identificacion": "Identificación",
+        "proyecto_curricular": "Proyecto Curricular",
+        "proyecto1": "Nombre del proyecto curricular 1",
+        "proyecto2": "Nombre del proyecto curricular 2",
+        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion": "Descripción",
+        "formulario": "Formulario correspondiente",
+        "formulario_placeholder": "Formulario correspondiente",
+        "guardar": "Guardar"
+    },
+
+    "coevaluacion_i": {
+        "titulo": "Coevaluación I",
+        "fechas": "Fechas",
+        "inicio": "Inicio",
+        "fin": "Fin",
+        "proyecto_curricular": "Proyecto Curricular",
+        "proyecto": "Proyecto",
+        "espacio_academico": "Espacio Académico",
+        "espacio": "Espacio académico",
+        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion": "Descripción",
+        "formulario": "Formulario correspondiente",
+        "formulario_placeholder": "Formulario correspondiente",
+        "guardar": "Guardar"
+    },
+
+    "autoevaluacion_ii": {
+        "titulo": "Autoevaluación II",
+        "fechas": "Fechas",
+        "inicio": "Inicio",
+        "fin": "Fin",
+        "nombre_docente": "Nombre del docente",
+        "nombre": "Nombre del Docente",
+        "identificacion_docente": "Identificación del docente",
+        "identificacion": "Identificación",
+        "proyecto_curricular": "Proyecto Curricular",
+        "proyecto1": "Nombre del proyecto curricular 1",
+        "proyecto2": "Nombre del proyecto curricular 2",
+        "proyectoN": "Nombre del proyecto curricular n",
+        "espacios_academicos": "Espacios Académicos",
+        "espacio1": "Lista de espacios académicos asociados al docente y al proyecto curricular",
+        "espacio2": "Lista de espacios académicos asociados al docente y al proyecto curricular",
+        "espacioN": "Lista de n espacios académicos asociados al docente y al proyecto curricular",
+        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion": "Descripción",
+        "formulario": "Formulario correspondiente",
+        "formulario_placeholder": "Formulario correspondiente",
+        "guardar": "Guardar"
+    },
+    
+    "coevaluacion_ii": {
+        "titulo": "Coevaluación II",
+        "fechas": "Fechas",
+        "inicio": "Inicio",
+        "fin": "Fin",
+        "proyecto_curricular": "Proyecto Curricular",
+        "proyecto": "Proyecto",
+        "docente": "Docente",
+        "nombre_docente": "Nombre del Docente",
+        "espacio_academico": "Espacio Académico",
+        "espacio": "Espacio académico",
+        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
+        "descripcion": "Descripción",
+        "formulario": "Formulario correspondiente",
+        "formulario_placeholder": "Formulario correspondiente",
+        "guardar": "Guardar"
     }
 }
