feat: ajustes de traduccion udistrital/sga_documentacion#420

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -101,21 +101,27 @@
     },
 
     "coevaluacion_i": {
-        "titulo": "Coevaluación I",
+        "titulo": "Evaluación de Coevaluación I",
+        "formato": "Código SIGUD por asignar",
+        "actor": "Cuerpo docente y estudiantado",
+        "cronograma": "Semanas 10 a 11 del calendario académico",
+        "documento": "Acta de co-evaluación del espacio curricular",
+        "instruccion": "Estimado cuerpo docente y estudiantado: Por favor co-evalúen con compromisos mutuos su desempeño docente y el de sus estudiantes en este espacio curricular utilizando el formato dispuesto para ello. Por favor cargue el acta resultado de este ejercicio de coevaluación.",
         "fechas": "Fechas",
-        "inicio": "Inicio",
-        "fin": "Fin",
+        "error_fecha_inicio": "Por favor, ingrese la fecha de inicio.",
+        "error_fecha_fin": "Por favor, ingrese la fecha de finalización.",
         "proyecto_curricular": "Proyecto Curricular",
-        "proyecto": "Proyecto",
+        "error_proyecto": "Por favor, seleccione un proyecto curricular.",
         "espacio_academico": "Espacio Académico",
-        "espacio": "Espacio académico",
-        "descripcion_proceso": "Descripción del proceso y orientación al usuario",
-        "descripcion": "Descripción",
-        "formulario": "Formulario correspondiente",
-        "formulario_placeholder": "Formulario correspondiente",
-        "guardar": "Guardar",
-        "grupo": "Grupo de Estudiantes"
-    },
+        "error_espacio": "Por favor, seleccione un espacio académico.",
+        "docente": "Nombre del Docente",
+        "error_docente": "Por favor, ingrese el nombre del docente.",
+        "grupo": "Grupo",
+        "error_grupo": "Por favor, seleccione un grupo.",
+        "descripcion_proceso": "Descripción del proceso",
+        "error_descripcion": "Por favor, ingrese la descripción del proceso.",
+        "guardar": "Guardar"
+      },
 
     "autoevaluacion_ii": {
         "titulo": "Autoevaluación II",
