--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -196,6 +196,8 @@
         "global": "Global",
         "mensaje_facultad": "Seleccione el nivel para el cual desea generar el reporte y las opciones de filtrado por Facultad",
         "mensaje_global": "Seleccione el nivel para el cual desea generar el reporte y las opciones de filtrado Global",
-        "periodo_academico": "Seleccione el periodo académico"        
+        "periodo_academico": "Seleccione el periodo académico",     
+        "seleccionar_facultad": "Seleccione la facultad",
+        "seleccionar_proyecto_curricular": "Seleccione el proyecto curricular"
     }
 }
